--- a/.github/workflows/update-concerts.yml
+++ b/.github/workflows/update-concerts.yml
@@ -14,6 +14,9 @@ jobs:
   update-concerts:
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: write
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
