Feature: Add interactive map for past concerts
- Create geocoding script for past concerts using Nominatim API
- Add weekly workflow to update concert map data
- Integrate Leaflet map with OpenStreetMap tiles
- Add map section after upcoming concerts
- Include popup with venue details and concert dates
- Auto-fit map bounds to show all concert locations
- Rate limiting and caching for geocoding efficiency

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Sito web GOasis Tribute Band",
   "scripts": {
-    "fetch-concerts": "node scripts/fetch-concerts.js"
+    "fetch-concerts": "node scripts/fetch-concerts.js",
+    "fetch-map": "node scripts/fetch-past-concerts-map.js"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14"
