Feature: Advanced geocoding system with multiple fallback strategies
- Implement 5-stage geocoding strategy for better venue discovery
- Add manual coordinates system for difficult venues
- Create venue aliases for alternative name spellings
- Add utility script for manual coordinate management
- Improve geocoding accuracy with preference for amenity results
- Add comprehensive troubleshooting documentation
- Support for manual override of automated geocoding

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sito web GOasis Tribute Band",
   "scripts": {
     "fetch-concerts": "node scripts/fetch-concerts.js",
-    "fetch-map": "node scripts/fetch-past-concerts-map.js"
+    "fetch-map": "node scripts/fetch-past-concerts-map.js",
+    "add-coordinates": "node scripts/add-manual-coordinates.js"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14"
