Refactor: Full automated geocoding with Google Places API
- Integrate Google Places API as primary geocoding source
- Nominatim as intelligent fallback for Google Places
- Remove all manual coordinate management tools
- Prefer venue types (bar, restaurant, night_club) in results
- Smart caching system prevents re-geocoding
- No manual intervention required - 100% automated
- Enhanced rate limiting and error handling

--- a/.github/workflows/update-concert-map.yml
+++ b/.github/workflows/update-concert-map.yml
@@ -35,6 +35,7 @@ jobs:
       env:
         NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
         NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+        GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
       run: npm run fetch-map
     
     - name: Check for changes
