--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Sito web GOasis Tribute Band",
   "scripts": {
     "fetch-concerts": "node scripts/fetch-concerts.js",
-    "fetch-map": "node scripts/fetch-past-concerts-map.js",
-    "add-coordinates": "node scripts/add-manual-coordinates.js"
+    "fetch-map": "node scripts/fetch-past-concerts-map.js"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14"
