--- a/.github/workflows/generate-fb-images.yml
+++ b/.github/workflows/generate-fb-images.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Check for changes
       id: git-check
       run: |
-        git diff --exit-code img/fb-post-*.png || echo "changes=true" >> $GITHUB_OUTPUT
+        git add img/fb-post-*.png
+        git diff --exit-code --cached img/fb-post-*.png || echo "changes=true" >> $GITHUB_OUTPUT
     
     - name: Commit and push if changed
       if: steps.git-check.outputs.changes == 'true'
